.kubernetes/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/civviebot-civviebot-db: "true"
        io.kompose.service: api
    spec:
      containers:
        - args:
            - python
            - -m
            - gunicorn
            - -b
            - 0.0.0.0:3002
            - civviebot_api:civviebot_api
          image: civviebot
          imagePullPolicy: Never
          name: api
          ports:
            - containerPort: 3002
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
